# SkyrimNet-Physical-Diaries

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SkyrimNet Physical Diaries.esp  vcpkg-configuration.json  vcpkg.json
Interface/Translations/: SkyrimNet Physical Diaries_CHINESE.txt  SkyrimNet Physical Diaries_ENGLISH.txt  SkyrimNet Physical Diaries_FRENCH.txt  SkyrimNet Physical Diaries_GERMAN.txt  SkyrimNet Physical Diaries_ITALIAN.txt  SkyrimNet Physical Diaries_JAPANESE.txt  SkyrimNet Physical Diaries_POLISH.txt  SkyrimNet Physical Diaries_RUSSIAN.txt  SkyrimNet Physical Diaries_SPANISH.txt
SKSE/Plugins/: SkyrimNetPhysicalDiaries.ini
SKSE/Plugins/SkyrimNet/config/triggers/: DiaryTaken.yaml
SKSE/Plugins/SkyrimNet/prompts/: diary_stolen.prompt
SKSE/Plugins/SkyrimNetPhysicalDiaries/Locales/: CHINESE.ini  ENGLISH.ini  FRENCH.ini  GERMAN.ini  ITALIAN.ini  JAPANESE.ini  POLISH.ini  RUSSIAN.ini  SPANISH.ini
Scripts/: SkyrimNetDiaries_Decorators.pex  SkyrimNetDiaries_EventListener.pex  SkyrimNetDiaries_MCM.pex  SkyrimNetDiaries_Native.pex
Source/Scripts/: SkyrimNetDiaries_Decorators.psc  SkyrimNetDiaries_EventListener.psc  SkyrimNetDiaries_MCM.psc  SkyrimNetDiaries_Native.psc
cmake/: Plugin.h.in
include/: BookManager.h  BookTextHook.h  Config.h  DPF_API.h  Database.h  DiaryDB.h  DiaryFormat.h  DiaryTheftHandler.h  DynamicBookFrameworkAPI.h  Localization.h  PCH.h  PapyrusAPI.h  SkyrimNetAPITest.h  SkyrimNetPhysicalDiariesAPI.h  SkyrimNetPublicAPI.h
src/: BookManager.cpp  BookTextHook.cpp  DPF_API.cpp  Database.cpp  Database_old.cpp  DiaryDB.cpp  DiaryTheftHandler.cpp  Localization.cpp  PapyrusAPI.cpp  SkyrimNetAPITest_old.cpp  main.cpp
